Correct silly mistake

--- a/config/sway/hotkeys.conf
+++ b/config/sway/hotkeys.conf
@@ -171,6 +171,6 @@
   bindsym $mod+Shift+c reload
 
   # Show logout menu
-  bindsym Pause exec /home/weednose/.config/custom_scripts/power.sh
+  bindsym $mod+Escape exec ~/.config/custom_scripts/power.sh
 
 #################################################
