Another silly mistake

--- a/config/spicetify/config-xpui.ini
+++ b/config/spicetify/config-xpui.ini
@@ -4,7 +4,7 @@ overwrite_assets       = 0
 spotify_launch_flags   = 
 check_spicetify_update = 1
 always_enable_devtools = 0
-prefs_path             = /home/weednose/.var/app/com.spotify.Client/config/spotify/prefs
+prefs_path             = ~/.var/app/com.spotify.Client/config/spotify/prefs
 inject_theme_js        = 1
 inject_css             = 1
 spotify_path           = /var/lib/flatpak/app/com.spotify.Client/x86_64/stable/active/files/extra/share/spotify/
